--- a/Sample_CICDCompositeApplication/pom.xml
+++ b/Sample_CICDCompositeApplication/pom.xml
@@ -106,5 +106,14 @@
         </configuration>
       </plugin>
     </plugins>
+	<distributionManagement>
+    <repository>
+        <uniqueVersion>false</uniqueVersion>
+        <id>corp1</id>
+        <name>Corporate Repository</name>
+        <url>G:\NewJoineeSoftwares\WSO2\wso2ei-6.5.0\repository\deployment\server\carbonapps</url>
+        <layout>default</layout>
+    </repository>
+</distributionManagement>
   </build>
 </project>
